edit of design affordances

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -904,7 +904,6 @@ INSERT QUOTE FROM SU AND TOBY
 
 Despite building familiarity with code, at this stage event simple game changes or adding new elements still required significant support.
 
-In a redesign of the starting code template at the end of P1, following the UMC (Use - Modify - Create) model  [@lee_computational_2011], I added several following design techniques to the template to make quick modification of the game easier. Descriptions of three of these follow.
 
 <!-- follow the Use-Modify-Create model to build familiarity with and to scaffold the adaptation and use of coding constructs [@lee_computational_2011]. -->
 
@@ -940,7 +939,11 @@ A later discussion section in this chapter illustrates a more complex interactio
 
 #### Key Design affordances included in the game template
 
-Beyond the use of a structural template, I introduced design elements which highlighted code which altered easily recognisable game experience features in a way which aligned with research on the potential of half-baked games to structure game making. In the design of the template and in testing at the end of P1, I began to identify simple changes to the code that could provoke a high impact on the game experiences. This section explores these designs decisions with brief analysis of the impact of them. Fuller analysis follows in chapters five and six. To help structure this initial analysis, I draw on HCI theory and in particular the concept of affordances.
+The initial use of a template was an intuitive response based on my own experience of teaching technology. However, the template included more code than a structural template. At the end of P1, I introduced design elements which highlighted code which altered easily recognisable game experience features in a way which aligned with research on the potential of half-baked games to structure game making. I began to identify simple changes to the code that could provoke a high impact on the game experiences. This section explores these designs decisions with brief analysis of the impact of them. Fuller analysis follows in chapters five and six. To help structure this initial analysis, I draw on HCI theory and in particular the concept of affordances.
+
+<!-- Descriptions of three design techniques to the template to make quick modification of the game easier follow. -->
+
+<!-- I adapted my design with an aim to increase speed and consistency of feedback from learner input, reduce coding syntax knowledge needed to progress, and thus reduce learner anxiety for novices.  -->
 
 <!-- list of changes
 background colour of the game
@@ -979,31 +982,16 @@ As they had been guided to make a game on a broadly environmental theme. Partici
 The process of creating a pixel art characters and hazard involved using an online grid design tool called Piskel, creating an design of an appropriate size, saving, exporting as an image, downloading to the hard drive of the laptop in use and finally uploading and incorporating the image into the code project and linking using code syntax. -->
 
 
-#### Introducing the quick start cards
+#### Observations on design behaviours encouraged through use of game template
 
-Although, help was available via in-line text code comments, I noted that to notice and read these comments required a degree of proficiency or code familiarity that not all participants had.
-
-In early trial, I had relied on participant experimentation, direct instruction to individuals / pairs (via pointing), and resultant peer learning happening. I relied on small groups initially.  
-
-For larger groups this was not optimal, leaving some learners confused and unsupported. At the end of P1 I tasked trainee computing teachers in my faculty created printable resources that highlighted particular key lines of code and variables (see figure 4.x below) and illustrated the relevant code changes needed to create big changes in the game.
-
-![](./Pictures/quickstart_phaser_1.png){width=50%}
-4.x - Example of a Quick start card
-
-CHANGE THIS TO A LANDSCAPE CARD?
+INCLUDE THE AT LANGUAGE
 
 The rationale aligns with the core motivations of UMC technique, to build familiarity with the code structure, and confidence in use of tools in an accelerated way. Also the larger change in the game play experience are motivating [find source], a concept that aligns with the concept of good feedback in HCI literature [find source].  
-
 
 <!-- While, initially conceived as a starting activity, many learners stuck with those possibilities for a long period of time. -->
 
 The templated game was structured to allow changes in code which were relatively easy to perform but which resulted in potentially large changes in game behaviour, appearance and difficulty. This created a large diversity in the games created and in the making activities of participants at this stage despite the small scale of the code changes involved.  Thus while I created these resources and the corresponding code structures to facilitate a _quick start_, the diversity of experience kept some participants extended periods of time.
 
-#### Observations on design behaviours encouraged through use of game template
-
-INCLUDE THE AT LANGUAGE
-
-The initial use of a template was an intuitive response based on my own experience of teaching technology. However, as the template evolved, I adapted my design with an aim to increase speed and consistency of feedback from learner input, reduce coding syntax knowledge needed to progress, and thus reduce learner anxiety for novices.
 
 While the simple changes to the game dynamics and patterns embedded in the starting template helped motivation and engagement, some participants soon began to ask how to make additions to the game.
 
@@ -1051,6 +1039,20 @@ DEVELOP THIS SECTION -->
 - This research supports claims that half-baked games invite development []
 - This research also supports other research on the attraction (and motivation) of retro, (introduction) on culture and livingstone, sefon-green. -->
 
+
+
+#### Introducing the quick start cards
+
+Although, help was available via in-line text code comments, I noted that to notice and read these comments required a degree of proficiency or code familiarity that not all participants had. In early trial, I had relied on participant experimentation, direct instruction to individuals / pairs (via pointing), and resultant peer learning happening. I relied on small groups initially.  
+
+For larger groups this was not optimal, leaving some learners confused and unsupported. At the end of P1 I tasked trainee computing teachers in my faculty created printable resources that highlighted particular key lines of code and variables (see figure 4.x below) and illustrated the relevant code changes needed to create big changes in the game.
+
+![](./Pictures/quickstart_phaser_1.png){width=50%}
+4.x - Example of a Quick start card
+
+CHANGE THIS TO A LANDSCAPE CARD?
+
+LINK TO THE NEXT SECTION
 
 
 ## 4. Participant conflict due to lack of relevant technical support
