--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -826,9 +826,12 @@ Scratch has an online community inspiring sharing and remixing. While my design 
 
 In P1, I used a variety of graphical and audio tools including:  Piskel to create sprite characters; Scratch to create backgrounds; Audacity and freesound.org record and edit audio for effects; Sonic Pi for background music; and Bxr online tool for sound effects. Participants would then save assets in a compatible format, upload them to the code playground, and link the file using a line of code.
 
-In Scratch there are tabs which host simplified graphical and audio studios. Design decisions prioritise ease of use and the ability to record audio right into the program. The self-contained of scratch has this reduces possibility for compounding errors and complexity caused by file formats, migration of data. However, to justify this choice, I observed a palpable a sense of achievement when participants succeeded in seeing and hearing their creations in their game after making the final changes in code. The reward seemed to be greater due to the difficulty involved.
+In Scratch there are tabs which host simplified graphical and audio studios. Design decisions prioritise ease of use and the ability to record audio right into the program. The self-contained of scratch has this reduces possibility for compounding errors and complexity caused by file formats, migration of data.
 
-<!-- The difference in friction to adding assets is significant and the possibilities for it to go wrong also great.  -->
+
+While in my design, there is greater friction caused by the process of migrating assets, I observed a palpable a sense of achievement when participants succeeded in seeing and hearing their creations in their game after making the final changes in code. The reward seemed to be greater due to the difficulty caused by the unfamiliar environment and processes.
+
+
 
 To find middle ground, in P2 and P3 I reduced the number of tools suggested when creating assets. The implications of working in this more porous learning space are explored in the later discussion section.
 
@@ -1006,11 +1009,7 @@ A common request was to add a moving enemy to the game. There was a great diverg
 REMOVE DUPLICATION HERE
 At this _quick start_ stage, knowledge of very few coding concepts were essential. It useful to compare this to a typical process of learning to code in a text language from first principles where the learner is met with a great many new concepts in the process of being guided to construct even the most basic of programs.  Thus, while some basic alterations are being made, this stage of learning design aligns most closely with the _Use_ stage of the UMC model (see lit review/ glossary) [@lee_computational_2011].  
 
-DOES THIS LIVE HERE?
-Instead analysis of the video data of participants reveals a large number of broader digital literacy skills involved in certain processes. For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel (a simplified Photoshop including - crop, fill and export tools); copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. Undertaking the full process involved learnign a complex chain of  these individual actions.
 
-<!-- IS THERE DUPLICATION HERE - OPERATION ALSO ANALYSE VIA AT? -->
-Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation. Learners who had mastered the skills were asked by others for help. The rapid adoption and transfer of these processes between community members indicated a high motivational factor for participants of incorporating self-created graphical elements, a topick which is also addressed in the following section.  
 
 <!-- While the template has self contained help in the form of text comments Some participant do not pick up all processes, some left behind and need support but that is available. Seeing patterns other peers adopted and creates a reason to ask for help. Peer propagation of patterns explored later. -->
 
@@ -1210,6 +1209,13 @@ After a discussion, a resolution to this issue in the thesis is to describe the 
 ### Discussion on Authenticity of Tools
 
 An inspirational aspect of _lifting the lid_ on previously unknown technology was reflected in a conversation among adult participants. They communicated a sense of awe of how much code must be involved in a professional game based on the relative complexity of the code of their simple game [FIND IN VIGNETTE OF THIS CHAPTER].
+
+
+MOVED SO EDIT DOWN ?
+Analysis of the video data of participants reveals a large number of broader digital literacy skills involved in asset authoring and migration. For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel (a simplified Photoshop including - crop, fill and export tools); copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. Undertaking the full process involved learning a complex chain of  these individual actions.
+
+<!-- IS THERE DUPLICATION HERE - OPERATION ALSO ANALYSE VIA AT? -->
+Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation. Learners who had mastered the skills were asked by others for help. The rapid adoption and transfer of these processes between community members indicated a high motivational factor for participants of incorporating self-created graphical elements, a topick which is also addressed in the following section.  
 
 There are similarities and differences between the use of code playgrounds and templates by novices and professionals. A possible interpretation of the use of a template as scaffolding provided in an educational context is that that support is inconsistent with a work place setting environment. However, the use of starter templates is also a common work place tactic.
 
