working on documentation part 4 now.

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -753,11 +753,11 @@ Examples include;
 For example, the use of CT concepts in a framework, listed as part of the initial design pattern card, which could then be discussed, ticked off or otherwise reflected on. -->
 
 
-## 3. Participant conflict due to lack of access and familiarity to tools and processes
+## 3. Tensions due to lack of access and familiarity to tools and processes
 
-**Nature of conflict - unfamiliarity with tools- complexity of processes leading to frustration**
+In the terminology of activity theory, conflicts are conflation of tensions and contradictions which result in paralysis in the activity in question. One conflict, which surfaced in P1, stemmed from unfamiliarity with tools and game making processes and resulted in frustration and ultimately inaction.
 
-This conflict, which surfaced in P1, was a conflation of various tension which stemmed from lack familiarity with coding and game making tools and practices. While, such tensions stemming from gaps in knowledge and practice are commonly addressed in formal learning environments through instruction, the informal nature of this learning setting made such approaches unappealing. I was keen to align with the motivational potential of hands-on (learning by experience) approaches to STEM education [@holstermann_hands-activities_2010].
+While, tensions stemming from gaps in knowledge and practice are commonly addressed in formal learning environments through forms of instruction, the informal nature of this learning setting made direct teaching approaches unappealing. In P1 I trialled brief class instruction of key coding concepts, e.g. logic statements, that I judged to be relevant to the whole group. Despite trying to limit the time spent on instruction, linking to their experiences and making the process informal, my journal notes reflecting on these interventions were unfavourable. Instead, I was keen to align with the motivational potential of hands-on (learning by experience) approaches to STEM education [@holstermann_hands-activities_2010].
 
 The process of helping participants build familiarity and competency in tool use was further complicated by my own motivations for working with as authentic as practical game authoring tools.
 
@@ -830,8 +830,6 @@ In Scratch there are tabs which host simplified graphical and audio studios. Des
 
 
 While in my design, there is greater friction caused by the process of migrating assets, I observed a palpable a sense of achievement when participants succeeded in seeing and hearing their creations in their game after making the final changes in code. The reward seemed to be greater due to the difficulty caused by the unfamiliar environment and processes.
-
-
 
 To find middle ground, in P2 and P3 I reduced the number of tools suggested when creating assets. The implications of working in this more porous learning space are explored in the later discussion section.
 
@@ -993,22 +991,25 @@ The rationale aligns with the core motivations of UMC technique, to build famili
 
 <!-- While, initially conceived as a starting activity, many learners stuck with those possibilities for a long period of time. -->
 
-The templated game was structured to allow changes in code which were relatively easy to perform but which resulted in potentially large changes in game behaviour, appearance and difficulty. This created a large diversity in the games created and in the making activities of participants at this stage despite the small scale of the code changes involved.  Thus while I created these resources and the corresponding code structures to facilitate a _quick start_, the diversity of experience kept some participants extended periods of time.
 
+At the use and modify stage, knowledge of very few coding concepts were essential. It useful to compare this to a typical process of learning to code in a text language from first principles where the learner is met with a great many new concepts in the process of being guided to construct even the most basic of programs.  Thus, while some basic alterations are being made, this stage of learning design aligns most closely with the _Use_ stage of the UMC model (see lit review/ glossary) [@lee_computational_2011].  
 
-While the simple changes to the game dynamics and patterns embedded in the starting template helped motivation and engagement, some participants soon began to ask how to make additions to the game.
+The templated game was structured to allow changes in code which were relatively easy to perform but which resulted in potentially large changes in game behaviour, appearance and difficulty. This created a large diversity in the games created and in the making activities of participants at this stage despite the small scale of the code changes involved.  Thus while I highlighted a limited number key code elements and structures to create affordances to facilitate a quick start, the diversity of experience kept some participants extended periods of time.
 
-This point marks the pivot to the create _phase_ on the UMC model. Thus the shift from P1 to P2 involved a much more careful and structured experience for participants in U and M stages.
+While the simple changes to the game dynamics and patterns embedded in the starting template helped motivation and engagement, some participants soon began to ask how to make additions to the game which needed new code structures to be added to the framework of the template. At this stage greater support was needed as explored in the next section. This point marks the pivot to the _create_ phase on the UMC model. The shift in design from P1 to P2 involved a much more careful and structured experience for participants in use and modify stages. While I do not have comparative video and interview evidence between P1 and P2,  alignment with existing research to my journal notes of observations of engagement are useful here to build a picture of the experience.
 
-While I do not have comparative video and interview evidence between P1 and P2, journal notes of observations of engagement support this interpretation and alignment with existing research. Broad, uncontroversial claims can be made. For example, new participants in P2 all maintained a working game thus able to share during each session.
+New participants in P2 all maintained a working game thus able to share at the end of each session. This compares to periods in P1 where there were extensive periods of time when the game was in a broken state and thus not shareable. My reflections as an facilitator align with research that the process of sharing creations are motivating thus, keeping games in a working / shareable state is optimal for participant engagement.
+
+Participants needed help to access and use the key affordances in code described above. In early trials with a limited number of families, I would point out the relevant part of the code and give and ask questions like, _I wonder what would happen if you changed that gravity variable?_
+
+I was concerned that for larger groups this was not optimal, risking leaving some unsupported. My response was to turn to supporting documentation. While this section has described my design response to tensions stemming from code and asset authoring tools and the resultant use of starting game code template, the next section explores similar tensions related to the role of supporting resources.
+
+<!-- although help was available via in-line text code comments, I noted that to notice and read these comments required a degree of proficiency or code familiarity that not all participants had.
+ -->
 
 <!-- NOTE
 MOVE? NEXT CHAPTER - ALSO NOT ALL PROGRESSED
 A common request was to add a moving enemy to the game. There was a great divergence in the amount of time learners took to want to progress beyond making embedded changes to adding new game design patterns. One parent Molly did not progress beyond this point despite engaging in phase three and phase four, focusing on graphical design and developing narratives. In the feedback session she commented that she was happy to reinforce her existing learning. -->
-
-REMOVE DUPLICATION HERE
-At this _quick start_ stage, knowledge of very few coding concepts were essential. It useful to compare this to a typical process of learning to code in a text language from first principles where the learner is met with a great many new concepts in the process of being guided to construct even the most basic of programs.  Thus, while some basic alterations are being made, this stage of learning design aligns most closely with the _Use_ stage of the UMC model (see lit review/ glossary) [@lee_computational_2011].  
-
 
 
 <!-- While the template has self contained help in the form of text comments Some participant do not pick up all processes, some left behind and need support but that is available. Seeing patterns other peers adopted and creates a reason to ask for help. Peer propagation of patterns explored later. -->
@@ -1039,35 +1040,33 @@ DEVELOP THIS SECTION -->
 - This research also supports other research on the attraction (and motivation) of retro, (introduction) on culture and livingstone, sefon-green. -->
 
 
-
-#### Introducing the quick start cards
-
-Although, help was available via in-line text code comments, I noted that to notice and read these comments required a degree of proficiency or code familiarity that not all participants had. In early trial, I had relied on participant experimentation, direct instruction to individuals / pairs (via pointing), and resultant peer learning happening. I relied on small groups initially.  
-
-For larger groups this was not optimal, leaving some learners confused and unsupported. At the end of P1 I tasked trainee computing teachers in my faculty created printable resources that highlighted particular key lines of code and variables (see figure 4.x below) and illustrated the relevant code changes needed to create big changes in the game.
-
-![](./Pictures/quickstart_phaser_1.png){width=50%}
-4.x - Example of a Quick start card
-
-CHANGE THIS TO A LANDSCAPE CARD?
-
-LINK TO THE NEXT SECTION
-
-
 ## 4. Participant conflict due to lack of relevant technical support
 
 **Nature of conflict - Frustrating delays - Not enough support from facilitator/s:  especially tech help - no dedicated documents, exiting docs not learner focused, coding process frustrating**
 
-A key conflict in the overall activity system was the inability for participants to make progress on their game due to lack of working processes and domain knowledge. To address this, in P1 I tried undertaking class instruction of key coding concepts, e.g. logic statements, that I judged to be relevant to the whole group. Despite trying to limit the time spent on instruction, linking to their experiences and making the process informal, my journal notes reflecting on these interventions were unfavourable.
 
-As outlined above, my model emerged with similarities t the UMC approach. While the starter template and quick activities served to address the _use_ and _modify_ stages, the _create_ stage required additional documentation as there were not enough facilitators to help participants with their individual choices of what to add to the game. This section outlines the evolutions and design choices informing the different forms of supporting documentation used.  
+A similar conflict in the overall activity system was the inability for participants progress due to lack of game and coding practices. A key aspect of the conflict involved adult participants being aware of the limited time that I could give each group and thus not calling for direct help. This section outlines the evolutions and design choices informing the different forms of supporting documentation used to address this conflict.
 
-SHIFT? - It is notable that the create stage of this model does not involve starting a totally new game from scratch as is imagined in some interpretations of that model. Due to the complexity of the code base and framework the process of creating a new GDP within the game as a suitable level of challenge.
+To support the use of the staring processes outlined above, at the end of P1 I asked trainee computing teachers in my faculty to create printable resources that highlighted the key lines of code in an way that linked to game behaviour. I called these quick start cards (see figure 4.x below).
 
-#### Linear and stand-alone tutorial and code snippet resources
+![](./Pictures/quickstart_phaser_1.png){width=50%}
+4.x - Example of a Quick start card
+NOTE -FIND THE JSCARD IN GOOGLE DRIVE DOWNLOAD IT TO WORD AT WORK AND OPEN IT. USE VELOCITY
 
-<!-- Longer form step by step tutorials are common in computing education. Examples can be found in Code Academy, and in the education resources of RPi foundation. Many examples talking learners through steps to build a game can be found online with varied amount of explanation of underlying constructs and concepts. I started my journey learning JS games using some provided by Mozilla and the Phaser developers. -->
 
+As outlined above the starter template and quick activities served to address the _use_ and _modify_ stages of the UMC approach. One seeded into the community, these processes also propagated via peer learning in ways which are explored in chapters five in six. In contrast, the _create_ stage required longer input from my self, to help participants with their individual choices of what to add to the game. To address this use of time I developed more extensive help files and documentation as there were not enough facilitators. The next section outlines the different forms of documentation created.  
+
+<!-- SHIFT? - It is notable that the create stage of this model does not involve starting a totally new game from scratch as is imagined in some interpretations of that model. Due to the complexity of the code base and framework the process of creating a new GDP within the game as a suitable level of challenge. -->
+
+#### Characteristics of different forms of supporting documentation
+
+<!-- ##### Linear and stand-alone tutorials and code snippet resources -->
+
+<!-- Longer form step by step tutorials are common in computing education. Examples can be found in Code Academy, and in the education resources of RPi foundation. Many examples talking learners through steps to build a game can be found online with varied amount of explanation of underlying constructs and concepts. I started my journey learning JS games using some provided
+by Mozilla and the Phaser developers. -->
+
+
+##### Code snippet examples
 To support a hands-on approach and responding the design choices of participants, I began by creating discreet code examples illustrating the requested elements.
 
 As explored in the literature review (check this), the use of code examples or snippets in code playgrounds is a common professional problem solving practice.
@@ -1084,6 +1083,8 @@ Instead I began to create code snippets which shared the structure of starter ga
 
 My rationale was that each pattern added builds familiarity with the code structure. feedback from P1 and video evidence as in Toby's proficiency supports this observation.
 
+##### Stand-alone tutorials
+
 For each code example I created a text based step-by-step documentation. Each guide was printed out for sessions and readers were encouraged to tackle them in any order. The extract outlining the use of physical maps above shows an example of a Roxanne(p) helping a Richie(c) find a code tutorial to follow based on child's interests.
 
 As the programme developed I took greater care over the form of the tutorials and started to collect them into a collection of chapters of an online book.
@@ -1093,17 +1094,18 @@ As the programme developed I took greater care over the form of the tutorials an
 
 <!-- While writing self-contained tutorials added a challenge to the documentation authouring process, the documents, especially when printed became a vital resource for this community. In chapter 5 I explore the extent to which these resources can scale for use beyond this context. -->
 
+##### Organising tutorials into a linear structure, specifically in the form of a book
+
 While prioritising a responsive, informal, hands-on approach over pre-teaching concepts, I struggled to resolve how best to provide background concepts and explanations of coding constructs, a need which had arisen from parents in the feedback to P1 (see appendix 4.x).
 
 However, as these tutorials took as a starting point the code of the starting template and did not attempt to explain that, they  did not however resolve the issue of participants wanting resources that explained these core constructs and underlying concepts. Thus I created opening chapter of the online manual which were more traditional in format and contained foundational knowledge. After making the game from a template, these foundational chapters are available to explain underlying concepts that the starting template had initially abstracted away from the participants.
 
-<!-- **Meeting yourself in the middle**
 However, as these tutorials took as a starting point the code of the starting template and did not attempt to explain that, they  did not however resolve the issue of participants wanting resources that explained these core constructs and underlying concepts.
-b
+
 Thus I created opening chapter of the online manual which were more traditional in format and contained foundational knowledge. I wondered how to best frame the relationship between these chapters and the self-contained ones described above. In practice, as user had started with a template game that is already up and running, to use this resources which would have involved backtracking.
 
 
-I named this concept _meeting yourself in the middle_ to represent the possibility of retracing the process of learning from first principles. The key concept here was that after making the game from a template, these foundational chapters resources are available at any time to explain all underlying concepts that the starting template had initially abstracted away from the participants. Thus the process would have value to reinforce computing concepts present in the design. Narratively these chapters form the equivalent of a prequel for readers interested in the full story. -->
+I named this concept _meeting yourself in the middle_ to represent the possibility of retracing the process of learning from first principles. The key concept here was that after making the game from a template, these foundational chapters resources are available at any time to explain all underlying concepts that the starting template had initially abstracted away from the participants. Thus the process would have value to reinforce computing concepts present in the design. Narratively these chapters form the equivalent of a prequel for readers interested in the full story.
 
 <!-- An example of parent Sh interaction with long form tutorial follows. Sh engaged with the long form resources. While this process did not involve dialogue, the recording of her screen allows for a detailed description of how the resources was used.
 Sh opens browswer to see list of code Examples, navigates to page, sees list of chapters, selects GDP pattern name, then follows along.
@@ -1115,14 +1117,14 @@ Interestingly, the online menus was not used by participants in any regular or c
 
 <!-- As explored in the literature review, it is difficult to explore this pedagogical approach relation to other similar programmes due to the lack of data on specifics of the learning materials presented to participants. -->
 
-#### Tensions and related to navigation of various documentations sources
-EDIT DOWN - WHAT IS THE KEY PURPOSE OF THIS BIT?
+
+#### Using of a collection of game design patterns
+
+**Tensions and related to navigation of various documentations sources**
 
 The previous stage had created a variety of supporting documents and processes. However at the start of P3 I still had not managed to devise a system to communicate these options consistently and effectively to students. My initial attempts were a list of code examples in a shared google document and printed out self-contained chapters.
 
 Thus, there were two main ways of approaching adding a new pattern. One to examine a code example which was built around the same code base. This would involve searching for new code constructs and notes in the code designed to orientate the learner, alerting them to the location and purpose of the relevant code. It is this approach that we see the child Toby adopt in the vignette presented in this chapter. The second approach was to use the longer form step by step help.
-
-#### Using of a collection of game design patterns
 
 While the code snippet and text resources were developed in response to one conflict they introduced new tensions. Specifically, I observed users failing or struggling to find the right resources online. I addressed this by printing step by step tutorials. However the paper based resources did not allow users to copy and paste code, a  characteristic of online code examples and tutorials which facilitates quick progress.
 
@@ -1159,7 +1161,10 @@ In P5 I extended the scheme to included  _System and Challenge_ patterns. These 
 
 ![Game Design Themes](./Pictures/four_gdp_themes.png){width=95%}
 
-This section has described the process of categorising  different themes the game pattern collection.  Similarly this outcome of theming the patterns by function and  difficulty to help build community game making activity and knowledge aligns with the work by Holopainen and colleagues on the use of pattern collections to help structure game making for adults [@holopainen2007teaching]. This theme is continued in the next chapter which explores the impact on users of GDPs.  
+This (sub)section has described the process of categorising  different themes the game pattern collection.  Similarly this outcome of theming the patterns by function and  difficulty to help build community game making activity and knowledge aligns with the work by Holopainen and colleagues on the use of pattern collections to help structure game making for adults [@holopainen2007teaching]. This theme is continued in the next chapter which explores the impact on users of GDPs.  
+
+The wider section has addressed the complex conflict of participants in accessing help to overcome smaller blocks to the progress.
+
 
 <!--
 My journal notes see an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers. In and early tentative attempt to define in broad strokes the types of game maker behaviour and underlying goals. In doing this I have taken inspiration from Bartle's game player types Hamari and Tuunanen, 2014). I translated player types to maker types based on notes in my observation journal and extracts from screen capture data. The following list of *Game Maker *types:
@@ -1172,7 +1177,7 @@ My journal notes see an evolution of attempts to try to build into the program, 
 An additional rationale for this process was to help reduce potential internal bias about the kind of process that a computer programmer should adopt, echoing the call for pluralism in approaches explored earlier in our section on germ cell concept Papert and Turkle, 1990). In short, my message was to participants there are more than one way the skin a cat. When you are learning to code follow your own preferences and try to observe and reflect on what works well for you. -->
 
 
-## Discussion of design issues
+## Chapter Discussion
 
 ### Summary of barriers and tensions explored in this chapter
 
@@ -1208,7 +1213,12 @@ After a discussion, a resolution to this issue in the thesis is to describe the 
 
 ### Discussion on Authenticity of Tools
 
-An inspirational aspect of _lifting the lid_ on previously unknown technology was reflected in a conversation among adult participants. They communicated a sense of awe of how much code must be involved in a professional game based on the relative complexity of the code of their simple game [FIND IN VIGNETTE OF THIS CHAPTER].
+An inspirational aspect of _lifting the lid_ on previously unknown technology was reflected in a conversation among adult participants. They communicated a sense of awe of how much effort and coding must be involved in a professional game based on the relative complexity of the code of their simple game.  
+
+    Pearl: It just shows you what goes into these games.
+    Student Helper3: Think about how much effort goes into.
+    Pearl: You just take things for granted don’t you?
+    [FIND IN 2019-03-18-ch_pa_TOCODE].
 
 
 MOVED SO EDIT DOWN ?
@@ -1221,11 +1231,15 @@ There are similarities and differences between the use of code playgrounds and t
 
 The motivations for creating starter templates are similar. Both educators and professional template creators want to shield new users from the complexity of the underlying web-technology and instead highlight design affordances that facilitate creative agency. For the learners of this study, agency is expressed via inclusion of home interests, play with dynamics and game layout. The motivations of the professional would include experimentation to check if the framework will support desired end user features. This work helps analysis if it is worth allocating time learning the details of the framework in question.  
 
+
 **Authentic tool use and instrumental agency**
 
 The impact of coding tool use on instrumental agency can be explored here to develop the previous section
 
 <!-- **Future work** MakeCode Arcade shows promise as an easier to use microworld geared to the use of design patterns. While this is beyond the remit of this study I did gather data. However, I would regather to allow for better focus of research questions.   -->
+
+
+
 
 #### Analysis in relation to existing research on related design toolsets
 
@@ -1295,6 +1309,14 @@ The following issues are relevant to the learner experience- other ways to enclo
 In my design, the use of GDPs in various scope forms this base: quick start activities; GDPs from a menu; novel GDPs/ -->
 
 <!-- The online only nature of the toolset does facilitate certain aspects of community participation by shifting the working space away from a desktop only environment, this facilitating some sharing by default.  -->
+
+
+### Authenticity of processes and documentation
+
+The process of creating bespoke documentation in the form of code snippets and step by step tutorials can be seen as occupying a pragmatic position on the scale of authenticity. While both were carefully aligned to the specific code template in a way that authentic developer focused documentation would not be, the process still developed skills used in professional settings.
+
+An interesting design tension here is that of which kind of documentation to prioritise. From the collection of GDP, I first linked directly to code snippets. When step by step tutorials were complete I link to those and at the start of each chapter included a link to the code snippets. In retrospect, my interpretation is that I prioritised the traditional form of instruction over different, bricolage-like developer practices. I propose it would be best to rectify this in future iterations of the design giving each equal weight.  
+
 #### Conclusion on authenticity
 
 While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles and other pedagogies. For example, while the complexity of authentic text code languages and authentic developer focused documentation can be intimidating, a following chapter explores the potential for drama processes to address learner anxiety in this domain.
